<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentContainer"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CourtDetailsFragment"
    android:background="@color/background_grey">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:id="@+id/imageHolderCourtDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/food"
            android:visibility="gone"/>
        <com.synnapps.carouselview.CarouselView
            android:id="@+id/carouselView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:fillColor="#FFFFFFFF"
            app:pageColor="#00000000"
            app:radius="6dp"
            app:slideInterval="3000"
            app:strokeColor="#FF777777"
            app:strokeWidth="1dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <ImageView
                android:id="@+id/imageBarCourtDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/food"
                android:visibility="gone"/>
            <ImageView
                android:id="@+id/imageRestroomCourtDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/shower"
                android:visibility="gone"/>
            <ImageView
                android:id="@+id/imageWifiCourtDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/wifi"
                android:visibility="gone"/>


        </LinearLayout>

        <TextView
            android:id="@+id/textDetailsCourtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textDetailsCourtAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opening_hours"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/opening_sunday_CourtDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opening_sunday"
            android:visibility="gone"
            android:layout_weight="1"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/opening_thursday_CourtDetails"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/opening_thursday"
            android:visibility="gone"
            android:textColor="@color/white" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/opening_monday_CourtDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opening_monday"
            android:visibility="gone"
            android:layout_weight="1"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/opening_friday_CourtDetails"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/opening_friday"
            android:visibility="gone"
            android:textColor="@color/white" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/opening_tuesday_CourtDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opening_tuesday"
            android:visibility="gone"
            android:layout_weight="1"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/opening_saturday_CourtDetails"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/opening_saturday"
            android:visibility="gone"
            android:textColor="@color/white" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/opening_wednesday_CourtDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opening_wednesday"
            android:visibility="gone"
            android:textColor="@color/white" />

    </LinearLayout>

    <TextView
        android:id="@+id/contact_phone_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_phone"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/contact_phone_CourtDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_phone"
        android:visibility="gone"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:foregroundGravity="bottom"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center|bottom">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonRentCourt"
            android:backgroundTint="@color/background_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rent_court"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

</LinearLayout>